(probably incomplete) list of the most important changes or of all
critical bugfixes in releases from a bugfix branch. For a detailed changelog
of changes in the main development branch, consult the version control
history.

Current development version (branch VERSION_1_FIXES)
====================================================

*

Version 1.1 - 2011 Mar 11
=========================

* Added missing doxygen documentation source files to distribution
* Fixed compilation error if HOST_CPU was undefined
* Set default for lock-free search to true if HOST_CPU is i686
* Implement cgos-gameover to fix unnecessary pondering with CGOS Python client
  after game is over
* Avoid a crash if more than 2 GB are allocated on 32-bit Windows systems
  without support for large memory addresses (tickets #73, #76)
  The default memory used is now limited to 1 GB and the number od threads
  to 4. The expand threshold is set to 3.
* Updated documentation for 64-bit compilation on Windows (ticket #73)
* configure.ac: removed GCC warning flags -Wconversion, -ansi, -pedantic,
  because they generate warnings with Boost 1.45
* Check for existence of sys/sysctl.h with autoconf and use it in SgPlatform
  only if it exists.

Version 1.0 - 2011 Jan 23
=========================

* Command line option parsing is now done with boost::program_options.
  Deprecated SgCmdLineOpt is no longer used. Options start with "--". 
* Game-independent autobook builder to generate opening books
* Support for propagating proven wins and losses in the UCT tree
* Initial support for static win/loss detection in Go
* New configure parameter --enable-max-size. The parameter --enable-optimize
  is no longer supported. The new script setup-build.sh can be used to set up
  some commonly used build configurations.
* Use only the same floating point type for all counts and values in
  SgUctSearch. The floating point type cane be set with the configure
  parameter --enable-uct-value-type