@@ -78,12 +78,7 @@ ostream& operator<<(ostream& stream, const SgWritePointSetID& w)
 
 //----------------------------------------------------------------------------
 
-SgReadPointSet::SgReadPointSet(SgPointSet& pointSet)
-    : m_pointSet(pointSet)
-{
-}
-
-istream& SgReadPointSet::Read(istream& in) const
+istream& operator>>(istream& in, SgPointSet& pointSet)
 {
     string pointstr;
     int size;
@@ -99,20 +94,10 @@ istream& SgReadPointSet::Read(istream& in) const
             int row = toupper(pointstr[1]) - '0';
             if (pointstr.size() == 3)
                 row = row * 10 + pointstr[2] - '0';
-            m_pointSet.Include(SgPointUtil::Pt(col, row));
+            pointSet.Include(SgPointUtil::Pt(col, row));
         }
     }
     return in;
-}
-
-istream& operator>>(istream& in, const SgReadPointSet& read)
-{
-    return read.Read(in);
-}
-
-istream& operator>>(istream& in, SgPointSet& pointSet)
-{
-    return in >> SgReadPointSet(pointSet);
 }
 
 //----------------------------------------------------------------------------
